    - Reconnect ssh broker in case of IO Error.
    - Reformat source onmainwindow.cpp.
    - Disable settings editing if a directory with central settings is exists.
    - Format long names on session buttons.
    - Central settings for Linux, Mac and Windows.
    - Fix VCXSRV parameter to disable PRIMARY clipboard in X2Go Client for Windows. Fixes: #927.

  [ Mike Gabriel ]
  * New upstream release (4.0.5.1):
    - xinerama.conf: Don't choke if screen coordintate lines in xinerama.conf
      start with a dash ("-"). (Fixes: #948).

  [ Mike DePaulo ]
  * New upstream release (4.0.5.1):
    - Windows: Update bundled Win32 OpenSSL from 1.0.1p to 1.0.1q,
      which fixes the multiple CVEs announced on 2015-12-03.
    - Windows: Upgrade Cygwin components to latest versions as of
      2016-01-21, except for the Cygwin DLL which is still at 1.7.33
      in order to avoid breaking folder sharing and printer sharing
      due to 1.7.34's ACL/permissions changes.
      (authorized_keys file would often have mode 660 instead of 600)
      The latest components include most notably:
        + openssh 6.8p1-1-x2go1 -> 7.1p2-1-x2go1 (security update)
        + openssl 1.0.2d-1 -> 1.0.2e-1 (security update)
    - Windows: Update nxproxy from 3.5.0.31 to 3.5.0.32
    - Windows: Update Unicode NSIS from 2.46.5 to 2.50.0 Pre-release,
      which fixes the DLL hijacking security vuln (NSIS bug 1125.)
    - Windows: Update PuTTY from 0.64 to 0.66, which fixes
      CVE-2015-5309.
    - Windows: Remove libzip. libssh no longer uses it.

  [ Orion Poplawski ]
  * New upstream release (4.0.5.1):
    - ssh{process,masterconnection}.cpp: run bash as a login shell when
      invoking any command remotely. Fixes: #928. Because this opens the door
      for ~/.bash_logout and friend scripts to be executed, which may contain
      calls to ncurses' reset or clear, also set the TERM variable to dump to
      not have unexpected output on stderr at logout time.